@@ -9,7 +9,11 @@ VP 10.0.0 Changelog
 
 - physics mostly redone (also previously known as 'physmod(5)')
   due to this it is now also possible to enable vsync without physics sideeffects like stutter or bad aiming (set FPS limiter to 1)
-  -> additional changes since physmod5: friction is no longer ignored (e.g. it was always 0.3) on the playfield, walls, slingshots, primitives, ramps, gates (and more?!)
+
+  -> additional changes since physmod5:
+     - friction is no longer ignored (e.g. it was always 0.3) on the playfield, walls, slingshots, primitives, ramps, gates (and more?!)
+     - collision heuristics are adapted for ball sizes different from the default 25
+     - (hopefully) no more ball-falling-through-playfield problem
 
 - add material editor
 
